--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,48 +7,104 @@
     tools:context=".ui.home.HomeFragment">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="233dp"
-        android:layout_height="211dp"
-        android:src="@drawable/timer_svgrepo_com"
+        android:id="@+id/imageView5"
+        android:layout_width="292dp"
+        android:layout_height="192dp"
+        android:src="@drawable/ic_main_homescreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.135" />
+        app:layout_constraintVertical_bias="0.07" />
 
     <TextView
-        android:id="@+id/home_timer"
+        android:id="@+id/txt_home_welcome"
+        android:layout_width="332dp"
+        android:layout_height="31dp"
+        android:fontFamily="@font/graduate"
+        android:text="Welcome to the GoStudy App"
+        android:textColor="#12B15F"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.025" />
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/graduate"
-        android:text="Time left: 25:00"
-        android:textColor="#000000"
-        android:textSize="24sp"
+        android:text="Start"
+        android:textColor="#FFFFFF"
+        app:backgroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.116" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome"
+        app:layout_constraintVertical_bias="0.739" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="80dp"
-        android:layout_height="59dp"
-        android:src="@drawable/ic_heart"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="402dp" />
+        android:id="@+id/imageView6"
+        android:layout_width="146dp"
+        android:layout_height="126dp"
+        android:src="@drawable/timer_svgrepo_com"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome"
+        app:layout_constraintVertical_bias="0.627" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="146dp"
+        android:layout_height="126dp"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/ic_menu_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/main_quote" />
+
+    <Button
+        android:id="@+id/button_pomodoro"
+        android:layout_width="146dp"
+        android:layout_height="37dp"
+        android:text="POMODORO"
+        android:textSize="11dp"
+        app:backgroundTint="#1273EC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+    <Button
+        android:id="@+id/button_current_status"
+        android:layout_width="146dp"
+        android:layout_height="37dp"
+        android:text="Current Status"
+        android:textSize="11dp"
+        app:backgroundTint="#1273EC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toEndOf="@+id/button_pomodoro"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <TextView
-        android:id="@+id/home_heart_rate"
+        android:id="@+id/main_quote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Heart Rate"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        android:fontFamily="@font/graduate"
+        android:text="Now study in more efficient way with GoStudy app!"
+        android:textColor="#000000"
+        app:fontFamily="@font/adamina"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
