--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,115 +4,114 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".ui.home.HomeFragment">
 
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="278dp"
-        android:layout_height="168dp"
-        android:src="@drawable/ic_main_homescreen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.149" />
-
     <TextView
-        android:id="@+id/txt_home_welcome"
-        android:layout_width="380dp"
-        android:layout_height="35dp"
+        android:id="@+id/textHomeWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/graduate"
         android:text="Welcome to GoStudy App"
-        android:textAlignment="center"
-        android:textColor="#12B15F"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="146dp"
-        android:layout_height="126dp"
-        android:src="@drawable/timer_svgrepo_com"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome"
-        app:layout_constraintVertical_bias="0.334" />
-
-    <Button
-        android:id="@+id/button_pomodoro"
-        android:layout_width="146dp"
-        android:layout_height="37dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="POMODORO"
-        android:textSize="10sp"
-        app:backgroundTint="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
-
-    <Button
-        android:id="@+id/button_current_status"
-        android:layout_width="146dp"
-        android:layout_height="37dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Current Status"
-        android:textSize="10sp"
-        app:backgroundTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/button_pomodoro"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/main_quote"
-        android:layout_width="299dp"
-        android:layout_height="46dp"
-        android:fontFamily="@font/graduate"
-        android:text="Now with GoStudy App, you can study in more efficient way!"
-        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#000000"
-        app:fontFamily="@font/comfortaa_bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.442" />
 
     <TextView
-        android:id="@+id/home_screen"
-        android:layout_width="191dp"
-        android:layout_height="61dp"
-        android:fontFamily="@font/autour_one"
-        android:text="GoStudy"
-        android:textAlignment="center"
+        android:id="@+id/textHomeTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="casual"
+        android:text="GoStudy !"
         android:textColor="#000000"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintBottom_toTopOf="@+id/textHomeWelcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.068" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="146dp"
-        android:layout_height="126dp"
-        android:src="@drawable/ic_main_status"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        android:id="@+id/imageView5"
+        android:layout_width="343dp"
+        android:layout_height="142dp"
+        android:src="@drawable/ic_main_study"
+        app:layout_constraintBottom_toTopOf="@+id/textHomeWelcome"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="@+id/imageView6" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textHomeTitle"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/textMainHeading"
+        android:layout_width="283dp"
+        android:layout_height="42dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Now with the GoStudy App, you can study in mode efficient way..!"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textHomeWelcome"
+        app:layout_constraintVertical_bias="0.035" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="128dp"
+        android:layout_height="126dp"
+        android:src="@drawable/ic_main_condition"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="127dp"
+        android:layout_height="127dp"
+        android:src="@drawable/ic_main_stopwatch"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textMainHeading"
+        app:layout_constraintVertical_bias="0.267" />
+
+    <Button
+        android:id="@+id/button_status"
+        android:layout_width="158dp"
+        android:layout_height="47dp"
+        android:backgroundTint="#000000"
+        android:fontFamily="@font/comfortaa_bold"
+        android:inputType="textCapWords"
+        android:text="Current Status"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintStart_toEndOf="@+id/button_study"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+    <Button
+        android:id="@+id/button_study"
+        android:layout_width="154dp"
+        android:layout_height="47dp"
+        android:backgroundTint="#000000"
+        android:fontFamily="@font/comfortaa_bold"
+        android:inputType="textCapWords"
+        android:text="Start"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.117"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:layout_constraintVertical_bias="0.0" />
+</androidx.constraintlayout.widget.ConstraintLayout>
