--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,8 +2,14 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/adamina</item>
+        <item>@font/alfa_slab_one</item>
+        <item>@font/anaheim</item>
         <item>@font/autour_one</item>
+        <item>@font/bowlby_one</item>
         <item>@font/comfortaa_bold</item>
         <item>@font/graduate</item>
+        <item>@font/russo_one</item>
+        <item>@font/secular_one</item>
+        <item>@font/source_serif_pro</item>
     </array>
 </resources>
