--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,48 @@
         android:id="@+id/nav_home"
         android:name="com.example.study.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_current_status"
+            app:destination="@id/nav_current_status" />
+        <action
+            android:id="@+id/action_nav_home_to_nav_pomodoro"
+            app:destination="@id/nav_pomodoro" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_report"
-        android:name="com.example.study.ui.report.ReportFragment"
-        android:label="Report"
+        android:name="com.example.study.ui.record.RecordFragment"
+        android:label="@string/menu_report"
         tools:layout="@layout/fragment_report" />
 
     <fragment
         android:id="@+id/nav_profile"
         android:name="com.example.study.ui.profile.ProfileFragment"
-        android:label="Profile"
-        tools:layout="@layout/fragment_profile" />
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_profile"/>
+
+    <fragment
+        android:id="@+id/nav_current_status"
+        android:name="com.example.study.ui.current_status.currentStatusFragment"
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_current_status"/>
+
+    <fragment
+        android:id="@+id/nav_logout_profile"
+        android:name="com.example.study.ui.logout.LogoutFragment"
+        android:label="Logout"
+        tools:layout="@layout/fragment_logout"/>
+
+    <fragment
+        android:id="@+id/nav_pomodoro"
+        android:name="com.example.study.pomodoro"
+        android:label="POMODORO"
+        tools:layout="@layout/fragment_pomodoro" />
+
+<!--    <fragment&lt;!&ndash;
+        android:id="@+id/nav_pomodoro_screen"
+        android:name="com.example.study.ui.pomodoro"
+        android:label="POMODORO"
+        tools:layout="@layout/fragment_pomodoro"/>&ndash;&gt;-->
 </navigation>
