--- a/app/src/main/res/layout/fragment_pomodoro.xml
+++ b/app/src/main/res/layout/fragment_pomodoro.xml
@@ -83,4 +83,18 @@
         app:layout_constraintTop_toTopOf="@+id/buttonStartCountdown"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/button_back_toMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#000000"
+        android:fontFamily="@font/comfortaa_bold"
+        android:inputType="textCapWords"
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
