--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,9 +21,9 @@
         app:srcCompat="@drawable/ic_go_study" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="113dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/russo_one"
+        android:fontFamily="@font/comfortaa_bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_user_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -32,8 +32,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="237dp"
+        android:layout_height="19dp"
         android:fontFamily="@font/adamina"
         android:text="@string/nav_header_user_id"
         android:textStyle="italic" />
