--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -7,10 +7,13 @@
 
     <Button
         android:id="@+id/logout_app"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="68dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:inputType="textCapSentences"
         android:text="Exit from App"
-        app:backgroundTint="#E36A00"
+        android:textSize="20sp"
+        app:backgroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -20,10 +23,13 @@
 
     <Button
         android:id="@+id/logout_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="275dp"
+        android:layout_height="68dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:inputType="textCapSentences"
         android:text="Exit from Account"
-        app:backgroundTint="#E36A00"
+        android:textSize="20sp"
+        app:backgroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -33,12 +39,13 @@
 
     <TextView
         android:id="@+id/logout_heading"
-        android:layout_width="110dp"
-        android:layout_height="31dp"
+        android:layout_width="206dp"
+        android:layout_height="44dp"
         android:text="Logout"
-        android:textColor="#000000"
-        android:textSize="24dp"
         android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:fontFamily="@font/graduate"
         app:layout_constraintBottom_toTopOf="@+id/logout_app"
         app:layout_constraintEnd_toEndOf="parent"
