--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,25 +44,24 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/profile_height"
         app:layout_constraintTop_toBottomOf="@+id/profile_height"
-        app:layout_constraintVertical_bias="0.196" />
+        app:layout_constraintVertical_bias="0.177" />
 
     <TextView
         android:id="@+id/profile_disease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="@string/user_disease"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/profile_gender"
         app:layout_constraintTop_toBottomOf="@+id/profile_gender"
-        app:layout_constraintVertical_bias="0.486" />
+        app:layout_constraintVertical_bias="0.216" />
 
     <TextView
         android:id="@+id/profile_height"
@@ -72,7 +71,7 @@
         android:text="@string/user_height"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/profile_weight"
@@ -87,11 +86,12 @@
         android:text="@string/user_birth_date"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
     <TextView
         android:id="@+id/profile_weight"
@@ -101,38 +101,24 @@
         android:text="@string/user_weight"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/profile_date_of_birth"
         app:layout_constraintTop_toBottomOf="@+id/profile_date_of_birth"
         app:layout_constraintVertical_bias="0.1" />
 
-    <Button
-        android:id="@+id/button_logout"
-        android:layout_width="133dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#000000"
-        android:fontFamily="@font/secular_one"
-        android:text="Log Out"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954" />
-
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="102dp"
-        android:layout_height="95dp"
+        android:layout_width="180dp"
+        android:layout_height="146dp"
+        android:src="@drawable/ic_menu_profile"
         app:layout_constraintBottom_toTopOf="@+id/profile_date_of_birth"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_user_id"
-        app:layout_constraintVertical_bias="0.404"
-        tools:src="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.783" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
