--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.record.RecordFragment">
 
-    <Button
-        android:id="@+id/button_record_erase_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#000000"
-        android:fontFamily="@font/comfortaa_bold"
-        android:inputType="textCapWords"
-        android:text="Erase Data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.926" />
-
     <TextView
         android:id="@+id/report_heading"
         android:layout_width="134dp"
@@ -44,12 +29,10 @@
         android:fontFamily="@font/comfortaa_bold"
         android:inputType="textCapSentences"
         android:text="Daily"
-        app:layout_constraintBottom_toTopOf="@+id/button_record_erase_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.244"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/report_heading"
-        app:layout_constraintVertical_bias="0.051" />
+        app:layout_constraintTop_toBottomOf="@+id/report_heading" />
 
     <Button
         android:id="@+id/button_report_weekly"
@@ -59,10 +42,8 @@
         android:fontFamily="@font/comfortaa_bold"
         android:inputType="textCapSentences"
         android:text="Weekly"
-        app:layout_constraintBottom_toTopOf="@+id/button_record_erase_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toEndOf="@+id/button_report_daily"
-        app:layout_constraintTop_toBottomOf="@+id/report_heading"
-        app:layout_constraintVertical_bias="0.051" />
+        app:layout_constraintTop_toBottomOf="@+id/report_heading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
